Package: R.rsp
==============

Version: 0.41.0-9000 [2018-01-04]

SIGNIFICANT CHANGES:

 * Now importing 'digest' (used to be a suggested package).

BUG FIXES:

 * Package failed to install under _R_CHECK_DEPENDS_ONLY_=true and 'digest'
   not being installed. Now importing 'digest'.

DEPRECATED AND DEFUNCT:

 * Renamed (internal) stop() method to terminate().


Version: 0.41.0 [2017-04-15]

BUG FIXES:

 * WORKAROUND: If the generated RSP output contains invalid characters in the
   current encoding and is longer than 10,000 characters, it may result in an
   infinite loop of warnings generated by base::cat() (at least on Linux).
   This is now detected and writeBin() is used as fallback for outputting.
   For details, see R-devel thread
   https://stat.ethz.ch/pipermail/r-devel/2017-January/073571.html.

 * RspRSourceCodeFactory did not preserve '\unnnn' encoded UTF-8 characters
   (they where turned into "<U+NNNN>" strings).

 * rcode() would sometimes return NULL.

 * When used on *.html.rsp vignettes, vignette engine R.rsp::rsp would delete
   the generated *.html immediately after being produced.
 
DEPRECATED AND DEFUNCT:

  * Removed defunct methods that were part of the legacy API.
  
  * Attribute 'verbatim' for RSP 'include' preprocessing directives is defunct.
    Use attribute 'type' instead.


Version: 0.40.0 [2016-12-05]

SIGNIFICANT CHANGES:

 * All vignette formats now output a tangle file even if empty. For example, in
   the past *.asis and *.ltx vignettes would not generate *.R tangle files,
   whereas now they generate "empty" ones (R CMD build drops such "empty"
   tangle R files but that is a different story).  This was done in order to
   hotfix / workaround PR #17185
   (https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17185)

SOFTWARE QUALITY:

 * ROBUSTNESS: findAsciiDoc() and findPandoc() is more liberal when trying to
   infer and parse the version of the executable and if they still fail they
   give more informative error messages.
