@@ -14,6 +14,8 @@ BUG FIXES:
 
 DEPRECATED AND DEFUNCT:
 
+ * Deprecated write() for RspResponse - use writeResponse() instead.
+ 
  * Renamed (internal) stop() method to terminate().
 
 
